<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Table Service</string>
    <string name="action_settings">Settings</string>
    <string name="hamburger_hot_dog_root_beer_coke_hamburger_cheeseburger_">Hamburger. Hot Dog. Root beer. Coke. Hamburger. Cheeseburger.</string>
    <string name="table_5">Table 5</string>
    <string name="subtotal">SUBTOTAL</string>
    <string name="tip">TIP</string>
    <string name="total">TOTAL</string>
    <string name="fifteen">15%</string>
    <string name="eighteen">18%</string>
    <string name="twenty">20%</string>
    <string name="other">Other</string>
    <string name="ok">OK</string>
    <string name="edit_hint">Enter Tip</string>
    <string name="sign">Sign</string>
    <string name="sign_toast">Thank you for paying!</string>
    <string name="done">Done</string>
    

</resources>
