<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp" >
    
    <TextView
        android:id="@+id/subtotal_txtView" 
        android:text = "@string/subtotal"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"/>
    
    <TextView
        android:id="@+id/subtotalString"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"  
        android:layout_below="@id/subtotal_txtView"
        android:textSize="18sp"   	       
        />
    
    <TextView 
        android:id="@+id/tip_txtView"
        android:text = "@string/tip"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"        
        android:layout_below="@id/subtotalString"
        android:paddingTop="16dp"
        />

    <LinearLayout
        android:id="@+id/tip_percent_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/tip_txtView"
        android:orientation="horizontal"
        android:paddingBottom="16dp" >

        <Button
            android:id="@+id/fifteen_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fifteen"
            android:layout_weight="1" />

        <Button
            android:id="@+id/eighteen_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eighteen"
            android:layout_weight="1"             />

        <Button
            android:id="@+id/twenty_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/twenty"
            android:layout_weight="1"             />

        <Button
            android:id="@+id/other_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other"
            android:layout_weight="1"             />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/otherTip_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_below="@id/tip_percent_layout" 
        android:orientation="horizontal"  
        android:visibility="gone"
        android:paddingBottom="16dp"   
        >
        <EditText 
        	android:id="@+id/edit_text"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_weight = "1"
        	android:hint="@string/edit_hint" />
        
        <Button
            android:id="@+id/ok_button"
            android:text="@string/ok"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"  
            />
        
    </LinearLayout>
    
    <TextView 
        android:id = "@+id/total_txtView"
        android:layout_width="match_parent"
       	android:layout_height="wrap_content"
       	android:layout_below="@id/otherTip_layout"     
       	android:text = "@string/total"    
        />
    
    <TextView
        android:id="@+id/totalString"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"  
        android:layout_below="@id/total_txtView" 
        android:textSize="18sp"   	               	       
    />
    
    <Button 
        android:id="@+id/sign_button"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:gravity = "center"  
        android:layout_below="@id/totalString"   
        android:text = "@string/sign"      
        />


</RelativeLayout>
